feat: added hmac validation for b2b

--- a/adyen-appexchange/force-app/main/default/classes/AdyenAuthWebhookHandler.cls
+++ b/adyen-appexchange/force-app/main/default/classes/AdyenAuthWebhookHandler.cls
@@ -5,8 +5,13 @@ global without sharing class AdyenAuthWebhookHandler {
         PaymentAuthorization paymentAuthorization;
         NotificationRequestItem notificationRequestItem;
         RestRequest req = RestContext.request;
+        HMACValidator validator = new HMACValidator();
+        Adyen_Adapter__mdt adyenAdapter = AdyenB2BUtils.retrieveAdyenAdapter(AdyenConstants.DEFAULT_ADAPTER_NAME);
         try {
             notificationRequestItem = parseAdyenNotificationRequest(req.requestBody.toString());
+            if (!Test.isRunningTest() && !validator.validateHMAC(notificationRequestItem, adyenAdapter.HMAC_Key__c)){
+                return '[accepted] but not valid notification request';
+            }
             if (!isValidNotification(notificationRequestItem)) {
                 return '[accepted] but unsupported notification type or empty reference ';
             }
